# affilate-abaus

./: .gitignore  README.md  docker-compose.yml  package-lock.json
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: auth.py  config.py  database.py  main.py  models.py  razorpay_service.py  services.py
backend/app/routers/: auth.py  dashboard.py  packages.py  payments.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: app.css  app.html
frontend/src/routes/: +page.svelte
